--- a/main.css
+++ b/main.css
@@ -784,7 +784,7 @@ button,
   -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
-  background-color: #1cb495;
+  background-color: #000000;
   border-radius: 6px;
   border: 0;
   color: #ffffff !important;
@@ -802,7 +802,7 @@ button,
   input[type="button"]:hover,
   button:hover,
   .button:hover {
-    background-color: #1fcaa7; }
+    background-color: #aba8a8; }
   input[type="submit"]:active,
   input[type="reset"]:active,
   input[type="button"]:active,
