--- a/main.css
+++ b/main.css
@@ -784,7 +784,7 @@ button,
   -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
-  background-color: #3c496b;
+  background-color: ##0f2151;
   border-radius: 6px;
   border: 0;
   color: #ffffff !important;
@@ -808,7 +808,7 @@ button,
   input[type="button"]:active,
   button:active,
   .button:active {
-    background-color: #3c496b; }
+    background-color: ##0f2151; }
   input[type="submit"].disabled, input[type="submit"]:disabled,
   input[type="reset"].disabled,
   input[type="reset"]:disabled,
