--- a/main.css
+++ b/main.css
@@ -784,16 +784,16 @@ button,
   -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
-  background-color: ##0f2151;
+  background-color: #cdd2df;
   border-radius: 6px;
   border: 0;
-  color: #ffffff !important;
+  color: #000000 !important;
   cursor: pointer;
   display: inline-block;
   font-weight: 700;
   height: 2.75em;
   line-height: 2.75em;
-  padding: 0 1.23em;
+  padding: 0 1.7em;
   text-align: center;
   text-decoration: none;
   white-space: nowrap; }
@@ -801,14 +801,15 @@ button,
   input[type="reset"]:hover,
   input[type="button"]:hover,
   button:hover,
-  .button:hover {
+  .button:hover { 
+	  color: #ffffff;
     background-color: #000000; }
   input[type="submit"]:active,
   input[type="reset"]:active,
   input[type="button"]:active,
   button:active,
-  .button:active {
-    background-color: ##0f2151; }
+  .button:active { 
+    background-color: #cdd2df; }
   input[type="submit"].disabled, input[type="submit"]:disabled,
   input[type="reset"].disabled,
   input[type="reset"]:disabled,
