--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ section, summary, time, mark, audio, video {
   display: inline-block;
   padding: 15px 30px;
   font-size: 16px;
-  color: white;
+  color: black;
   background-color: blue;
   text-decoration: none;
   border-radius: 5px;
