--- a/main.css
+++ b/main.css
@@ -36,11 +36,15 @@ section, summary, time, mark, audio, video {
   text-decoration: none;
   border-radius: 5px;
   border: none;
+
+
 }
 
 .button:hover {
-  background-color: darkblue;
+   color: #ffffff;
+    background-color: #000000; 
 }
+
 
 
 
