--- a/main.css
+++ b/main.css
@@ -805,14 +805,16 @@ button,
   input[type="button"]:hover,
   button:hover,
   .button:hover { 
-	  color: #ffffff;
+    color: #ECEDED;
     background-color: #000000; }
   input[type="submit"]:active,
   input[type="reset"]:active,
   input[type="button"]:active,
   button:active,
   .button:active { 
-    background-color: #ECEDED; }
+    background-color: #ECEDED;
+  color: #000000
+  }
   input[type="submit"].disabled, input[type="submit"]:disabled,
   input[type="reset"].disabled,
   input[type="reset"]:disabled,
