--- a/main.css
+++ b/main.css
@@ -786,7 +786,7 @@ button,
   background-color: #ECEDED;
   border-radius: 6px;
   border: 0;
-  color: #000000 !important;
+  color: #000000;
   cursor: pointer;
   display: inline-block;
   font-weight: 700;
