--- a/main.css
+++ b/main.css
@@ -41,7 +41,12 @@ section, summary, time, mark, audio, video {
 }
 
 @keyframes typing {
-	from { width: 0 }
+	 from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
 
 .button {
