--- a/main.css
+++ b/main.css
@@ -23,30 +23,28 @@ section, summary, time, mark, audio, video {
 
 .container11 {display: inline-block;}
 
-.typetext {
-	font-size: 5em; 
-	letter-spacing: 10px; 
-	border-right: 5px solid; 
-	
-	width: 100%;
-	white-space: nowrap; 
-	overflow: hidden; 
-	animation:
-		typing 2s steps(18),
-		cursor .4s step-end infinite alternate; 
+/* The typewriter effect for paragraph text */
+.typewriter p {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typewriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end), /* Adjust the steps based on the length of the text */
+    blink-caret .75s step-end infinite; /* Blink effect for the cursor */
 }
 
-@keyframes cursor {
-	50% { border-color: transparant }
-}
-
+/* The typing effect */
 @keyframes typing {
-	 from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
 }
 
 .button {
