--- a/main.css
+++ b/main.css
@@ -31,19 +31,20 @@ section, summary, time, mark, audio, video {
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
-    typing 3.5s steps(40, end), /* Adjust the steps based on the length of the text */
+    typing 3.5s steps(30, end), /* Adjust the steps based on the length of the text */
     blink-caret .75s step-end infinite; /* Blink effect for the cursor */
+  width: 0; 
 }
 
 /* The typing effect */
 @keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+  from { width: 0; }
+  to { width: 100%; }
 }
 
 /* The typewriter cursor effect */
 @keyframes blink-caret {
-  from, to { border-color: transparent }
+  from, to { border-color: transparent; }
   50% { border-color: orange; }
 }
 
